Refactor Account section: dropdown with billing, security, and team switching

--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -239,7 +239,7 @@
           <li><a href="/admin/notifications" class="block px-3 py-2 rounded hover:bg-gray-100">🔔 Notifications</a></li>
           <li><a href="/admin/preferences" class="block px-3 py-2 rounded hover:bg-gray-100">⚙️ User Preferences</a></li>
           <li><a href="/admin/design" class="block px-3 py-2 rounded hover:bg-gray-100">🎨 Appearance</a></li>
-          <li><a href="/admin/domains" class="block px-3 py-2 rounded hover:bg-gray-100">🌐 Custom Management</a></li>
+          <li><a href="/admin/domains" class="block px-3 py-2 rounded hover:bg-gray-100">🌐 Domain Management</a></li>
           <li><a href="/admin/translation" class="block px-3 py-2 rounded hover:bg-gray-100">🌍 Language</a></li>
           <li><a href="/admin/timezones" class="block px-3 py-2 rounded hover:bg-gray-100">🕒 Timezones</a></li>
           <li><a href="/admin/forms" class="block px-3 py-2 rounded hover:bg-gray-100">📋 Forms</a></li>
