--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -240,7 +240,23 @@
           <li><a href="/admin/preferences" class="block px-3 py-2 rounded hover:bg-gray-100">⚙️ User Preferences</a></li>
           <li><a href="/admin/design" class="block px-3 py-2 rounded hover:bg-gray-100">🎨 Appearance</a></li>
           <li><a href="/admin/domains" class="block px-3 py-2 rounded hover:bg-gray-100">🌐 Domain Management</a></li>
-          <li><a href="/admin/translation" class="block px-3 py-2 rounded hover:bg-gray-100">🌍 Language</a></li>
+<!-- Language Dropdown -->
+<li>
+  <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
+    <span class="flex items-center gap-2">🌍 Language</span>
+    <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none"
+         stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+      <path d="M6 9l6 6 6-6" />
+    </svg>
+  </button>
+  <ul class="dropdown-menu hidden ml-4 space-y-1">
+    <li><a href="/admin/translation?lang=en" class="block px-3 py-2 rounded hover:bg-gray-100">🇬🇧 English</a></li>
+    <li><a href="/admin/translation?lang=fr" class="block px-3 py-2 rounded hover:bg-gray-100">🇫🇷 French</a></li>
+    <li><a href="/admin/translation?lang=es" class="block px-3 py-2 rounded hover:bg-gray-100">🇪🇸 Spanish</a></li>
+    <li><a href="/admin/translation?lang=sw" class="block px-3 py-2 rounded hover:bg-gray-100">🇰🇪 Swahili</a></li>
+    <li><a href="/admin/translation?lang=de" class="block px-3 py-2 rounded hover:bg-gray-100">🇩🇪 German</a></li>
+  </ul>
+</li>
           <li><a href="/admin/timezones" class="block px-3 py-2 rounded hover:bg-gray-100">🕒 Timezones</a></li>
           <li><a href="/admin/industries" class="block px-3 py-2 rounded hover:bg-gray-100">🏭 Industries</a></li>
           <li><a href="/admin/api-keys" class="block px-3 py-2 rounded hover:bg-gray-100">🔑 API Keys</a></li>
