🌐 Updated language selector: replaced Kiswahili with Portuguese

--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -253,7 +253,7 @@
     <li><a href="/admin/translation?lang=en" class="block px-3 py-2 rounded hover:bg-gray-100">🇬🇧 English</a></li>
     <li><a href="/admin/translation?lang=fr" class="block px-3 py-2 rounded hover:bg-gray-100">🇫🇷 French</a></li>
     <li><a href="/admin/translation?lang=es" class="block px-3 py-2 rounded hover:bg-gray-100">🇪🇸 Spanish</a></li>
-    <li><a href="/admin/translation?lang=sw" class="block px-3 py-2 rounded hover:bg-gray-100">🇰🇪 Swahili</a></li>
+<li><a href="/admin/translation?lang=pt" class="block px-3 py-2 rounded hover:bg-gray-100">🇵🇹 Portuguese</a></li>
     <li><a href="/admin/translation?lang=de" class="block px-3 py-2 rounded hover:bg-gray-100">🇩🇪 German</a></li>
   </ul>
 </li>
