--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -252,6 +252,8 @@
   <ul class="dropdown-menu hidden ml-4 space-y-1">
     <li><a href="/admin/translation?lang=en" class="block px-3 py-2 rounded hover:bg-gray-100">🇬🇧 English</a></li>
     <li><a href="/admin/translation?lang=fr" class="block px-3 py-2 rounded hover:bg-gray-100">🇫🇷 French</a></li>
+    <li><a href="/admin/translation/nl" class="block px-3 py-2 rounded hover:bg-gray-100">🇳🇱 Dutch</a></li>
+
     <li><a href="/admin/translation?lang=es" class="block px-3 py-2 rounded hover:bg-gray-100">🇪🇸 Spanish</a></li>
 <li><a href="/admin/translation?lang=pt" class="block px-3 py-2 rounded hover:bg-gray-100">🇵🇹 Portuguese</a></li>
     <li><a href="/admin/translation?lang=de" class="block px-3 py-2 rounded hover:bg-gray-100">🇩🇪 German</a></li>
