--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -10,10 +10,10 @@
     </div>
   </div>
 
-  <!-- Call to Action -->
+  <!-- CTA -->
   <div class="px-4 py-3">
-    <button class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-4 py-2 rounded transition" data-i18n="add_booking">
-      + Add Booking
+    <button class="bg-blue-600 hover:bg-blue-700 text-white text-sm px-4 py-2 rounded transition">
+      ➕ <span data-i18n="sidebar.add_booking">Add Booking</span>
     </button>
   </div>
 
@@ -21,40 +21,40 @@
   <nav class="flex-1 overflow-y-auto px-4 pb-4">
     <ul class="space-y-1 text-sm text-gray-800">
       <li>
-        <a href="/admin/dashboard" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100" data-i18n="dashboard">
-          🏠 Dashboard
+        <a href="/admin/dashboard" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">
+          🏠 <span data-i18n="sidebar.dashboard">Dashboard</span>
         </a>
       </li>
 
       <!-- Bookings Dropdown -->
       <li>
         <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
-          <span class="flex items-center gap-2" data-i18n="bookings">📅 Bookings</span>
+          <span class="flex items-center gap-2">📅 <span data-i18n="sidebar.bookings">Bookings</span></span>
           <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
             <path d="M6 9l6 6 6-6" />
           </svg>
         </button>
         <ul class="dropdown-menu hidden ml-4 space-y-1">
-          <li><a href="/admin/bookings/upcoming" data-i18n="upcoming_bookings" class="block px-3 py-2 rounded hover:bg-gray-100">🔜 Upcoming Bookings</a></li>
-          <li><a href="/admin/bookings/today" data-i18n="todays_bookings" class="block px-3 py-2 rounded hover:bg-gray-100">📆 Today's Bookings</a></li>
-          <li><a href="/admin/bookings/unassigned" data-i18n="unassigned_bookings" class="block px-3 py-2 rounded hover:bg-gray-100">🧩 Unassigned Bookings</a></li>
-          <li><a href="/admin/bookings/quotes" data-i18n="quotes_estimates" class="block px-3 py-2 rounded hover:bg-gray-100">💬 Quotes & Estimates</a></li>
-          <li><a href="/admin/bookings/cancellations" data-i18n="cancellations" class="block px-3 py-2 rounded hover:bg-gray-100">❌ Cancellations</a></li>
-          <li><a href="/admin/bookings/history" data-i18n="booking_history" class="block px-3 py-2 rounded hover:bg-gray-100">📖 Booking History</a></li>
-          <li><a href="/admin/bookings/drafts" data-i18n="draft_bookings" class="block px-3 py-2 rounded hover:bg-gray-100">📝 Draft Bookings</a></li>
-          <li><a href="/admin/calendar" data-i18n="calendar_view" class="block px-3 py-2 rounded hover:bg-gray-100">🗓️ Calendar View</a></li>
-          <li><a href="/admin/map" data-i18n="map_view" class="block px-3 py-2 rounded hover:bg-gray-100">🗺️ Map View</a></li>
+          <li><a href="/admin/bookings/upcoming" class="block px-3 py-2 rounded hover:bg-gray-100">🔜 <span data-i18n="sidebar.bookings_upcoming">Upcoming Bookings</span></a></li>
+          <li><a href="/admin/bookings/today" class="block px-3 py-2 rounded hover:bg-gray-100">📆 <span data-i18n="sidebar.bookings_today">Today's Bookings</span></a></li>
+          <li><a href="/admin/bookings/unassigned" class="block px-3 py-2 rounded hover:bg-gray-100">🧩 <span data-i18n="sidebar.bookings_unassigned">Unassigned Bookings</span></a></li>
+          <li><a href="/admin/bookings/quotes" class="block px-3 py-2 rounded hover:bg-gray-100">💬 <span data-i18n="sidebar.bookings_quotes">Quotes & Estimates</span></a></li>
+          <li><a href="/admin/bookings/cancellations" class="block px-3 py-2 rounded hover:bg-gray-100">❌ <span data-i18n="sidebar.bookings_cancellations">Cancellations</span></a></li>
+          <li><a href="/admin/bookings/history" class="block px-3 py-2 rounded hover:bg-gray-100">📖 <span data-i18n="sidebar.bookings_history">Booking History</span></a></li>
+          <li><a href="/admin/bookings/drafts" class="block px-3 py-2 rounded hover:bg-gray-100">📝 <span data-i18n="sidebar.bookings_drafts">Draft Bookings</span></a></li>
+          <li><a href="/admin/calendar" class="block px-3 py-2 rounded hover:bg-gray-100">🗓️ <span data-i18n="sidebar.bookings_calendar">Calendar View</span></a></li>
+          <li><a href="/admin/map" class="block px-3 py-2 rounded hover:bg-gray-100">🗺️ <span data-i18n="sidebar.bookings_map">Map View</span></a></li>
         </ul>
       </li>
 
-      <!-- Continue the same pattern -->
-      <li><a href="/admin/customers" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100" data-i18n="customer_management">🧑 Customer Management</a></li>
-      <li><a href="/admin/tags" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100" data-i18n="crm">🏷️ CRM</a></li>
+      <!-- Clients & CRM -->
+      <li><a href="/admin/customers" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🧑 <span data-i18n="sidebar.customers">Customer Management</span></a></li>
+      <li><a href="/admin/tags" class="flex items-center gap-2 px-3 py-2 rounded hover:bg-gray-100">🏷️ <span data-i18n="sidebar.crm">CRM</span></a></li>
 
-      <!-- 🌍 Language Dropdown -->
+      <!-- Language Dropdown -->
       <li>
         <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
-          <span class="flex items-center gap-2" data-i18n="language">🌍 Language</span>
+          <span class="flex items-center gap-2">🌍 <span data-i18n="sidebar.language">Language</span></span>
           <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
             <path d="M6 9l6 6 6-6" />
           </svg>
