Include local i18n script support and CSP-safe assets in admin dashboard

--- a/public/admin/admin-dashboard.html
+++ b/public/admin/admin-dashboard.html
@@ -58,13 +58,10 @@
         </div>
       </main>
     </div>
-<!-- jQuery and i18next dependencies -->
-<script src="https://unpkg.com/jquery@3.6.0/dist/jquery.min.js"></script>
-<script src="https://unpkg.com/i18next@21.6.3/i18next.min.js"></script>
-<script src="https://unpkg.com/i18next-http-backend@1.4.1/i18nextHttpBackend.min.js"></script>
-<script src="https://unpkg.com/jquery-i18next@1.2.1/jquery-i18next.min.js"></script>
-
-<!-- Your i18n logic -->
+<script src="/js/jquery.min.js"></script>
+<script src="/js/i18next.min.js"></script>
+<script src="/js/i18nextHttpBackend.min.js"></script>
+<script src="/js/jquery-i18next.min.js"></script>
 <script src="/js/i18n.js"></script>
 
   </body>
