--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -210,7 +210,7 @@
           <!-- 🌍 Language Dropdown -->
       <li>
         <button class="w-full flex items-center justify-between px-3 py-2 rounded hover:bg-gray-100 dropdown-toggle">
-          <span class="flex items-center gap-2" data-i18n="language">🌍 Language</span>
+<span class="flex items-center gap-2" data-i18n="sidebar.language">🌍 Language</span>
           <svg class="w-3 h-3 ml-auto transition-transform duration-200 text-gray-500" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
             <path d="M6 9l6 6 6-6" />
           </svg>
