Add preferred_language API and inject preferred language into admin dashboard

--- a/public/admin/admin-dashboard.html
+++ b/public/admin/admin-dashboard.html
@@ -63,6 +63,13 @@
 <script src="/js/i18nextHttpBackend.min.js"></script>
 <script src="/js/jquery-i18next.min.js"></script>
 <script src="/js/i18n.js"></script>
+<script>
+  window.__USER__ = {
+    business: {
+      preferred_language: "{{preferred_language}}"
+    }
+  };
+</script>
 
   </body>
 </html>
