--- a/public/register.html
+++ b/public/register.html
@@ -3,83 +3,115 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Support – Admin</title>
-
-  <!-- Tailwind CSS -->
+  <title>Register Your Business | Tidyzenic</title>
   <link rel="stylesheet" href="/styles.css" />
-
-  <!-- Inter Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-
-  <!-- Basic CSP fallback (for dev); nonce-based CSP handled server-side -->
-  <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data:; connect-src 'self' https://*.tidyzenic.com;">
 </head>
 
-<body class="font-inter text-gray-900 bg-gray-100 min-h-screen">
+<body class="min-h-screen bg-gray-100 text-gray-900 flex items-center justify-center p-4">
+  <div class="max-w-xl w-full bg-white p-8 rounded-xl shadow-lg">
+    <h1 class="text-2xl font-bold text-center text-blue-700 mb-6">Register Your Business</h1>
 
-  <!-- Header (mobile) -->
-  <header class="md:hidden flex items-center justify-between p-4 bg-white shadow sticky top-0 z-50">
-    <div class="flex items-center space-x-2">
-      <button id="menuToggle" class="text-gray-700 focus:outline-none">
-        <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
-        </svg>
-      </button>
-      <span class="font-bold text-lg text-blue-600">Support</span>
-    </div>
-  </header>
-
-  <!-- Layout -->
-  <div class="flex min-h-screen relative">
-    <!-- Sidebar -->
-    <div id="sidebar-container" class="fixed md:relative z-40 inset-y-0 left-0 w-72 transform transition-transform duration-300 ease-in-out -translate-x-full md:translate-x-0"></div>
-    <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
-
-    <!-- Main Content -->
-    <main class="flex-1 p-4 md:p-8 overflow-y-auto relative z-10">
-      <div class="max-w-5xl mx-auto">
-        <div class="bg-white p-6 rounded-2xl shadow-xl mb-12">
-          <div class="flex items-center justify-between mb-6">
-            <div>
-              <h1 class="text-3xl font-bold text-blue-700">📨 Support Tickets</h1>
-              <p class="text-sm text-gray-600 mt-1">All support requests from users</p>
-            </div>
-            <div class="text-sm bg-blue-100 text-blue-800 px-4 py-2 rounded-xl shadow">
-              <span id="adminBadgeName">Admin</span> · <span id="adminBadgeEmail">email@example.com</span>
-            </div>
-          </div>
-
-          <!-- Search -->
-          <input id="ticketSearch" type="text" placeholder="Search tickets..." class="w-full md:w-1/3 mb-6 px-4 py-2 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-200" />
-
-          <!-- Ticket List -->
-          <div id="supportTickets" class="space-y-6">
-            <p class="text-center text-gray-500">Loading tickets...</p>
-          </div>
-        </div>
+    <form id="registerForm" action="/register" method="POST" class="space-y-4">
+      <div>
+        <label for="business_name" class="block text-sm font-medium text-gray-700">Business Name</label>
+        <input type="text" id="business_name" name="business_name" required class="mt-1 w-full p-2 border border-gray-300 rounded-md">
       </div>
-    </main>
+
+      <div>
+        <label for="owner_name" class="block text-sm font-medium text-gray-700">Owner Name</label>
+        <input type="text" id="owner_name" name="owner_name" required class="mt-1 w-full p-2 border border-gray-300 rounded-md">
+      </div>
+
+      <div>
+        <label for="email" class="block text-sm font-medium text-gray-700">Email Address</label>
+        <input type="email" id="email" name="email" required class="mt-1 w-full p-2 border border-gray-300 rounded-md">
+      </div>
+
+      <div>
+        <label for="phone" class="block text-sm font-medium text-gray-700">Phone Number</label>
+        <input type="tel" id="phone" name="phone" required class="mt-1 w-full p-2 border border-gray-300 rounded-md">
+      </div>
+
+      <!-- Subdomain (Auto-generated) -->
+      <div>
+        <label class="block text-sm font-medium text-gray-700">Subdomain</label>
+        <input type="text" id="subdomain" name="subdomain" readonly required class="mt-1 w-full p-2 border border-gray-300 rounded-md bg-gray-100 text-gray-600">
+        <p id="subdomainStatus" class="text-sm mt-1 text-red-600 hidden">Subdomain is already taken.</p>
+      </div>
+
+      <div>
+        <label for="custom_domain" class="block text-sm font-medium text-gray-700">Custom Domain (optional)</label>
+        <input type="text" id="custom_domain" name="custom_domain" class="mt-1 w-full p-2 border border-gray-300 rounded-md">
+      </div>
+
+      <div>
+        <label for="industry" class="block text-sm font-medium text-gray-700">Industry</label>
+        <input type="text" id="industry" name="industry" required class="mt-1 w-full p-2 border border-gray-300 rounded-md">
+      </div>
+
+      <div>
+        <label for="location" class="block text-sm font-medium text-gray-700">Location</label>
+        <input type="text" id="location" name="location" required class="mt-1 w-full p-2 border border-gray-300 rounded-md">
+      </div>
+
+      <div>
+        <label for="vat_number" class="block text-sm font-medium text-gray-700">VAT Number (optional)</label>
+        <input type="text" id="vat_number" name="vat_number" class="mt-1 w-full p-2 border border-gray-300 rounded-md">
+      </div>
+
+      <div>
+        <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
+        <input type="password" id="password" name="password" required minlength="6" class="mt-1 w-full p-2 border border-gray-300 rounded-md">
+      </div>
+
+      <div>
+        <label for="preferred_language" class="block text-sm font-medium text-gray-700">Preferred Language</label>
+        <select id="preferred_language" name="preferred_language" required class="mt-1 w-full border border-gray-300 rounded-md p-2">
+          <option value="en">English</option>
+          <option value="fr">Français</option>
+          <option value="nl">Dutch</option>
+          <option value="es">Español</option>
+          <option value="pt">Português</option>
+          <option value="de">Deutsch</option>
+        </select>
+      </div>
+
+      <div class="pt-4">
+        <button type="submit" id="submitBtn" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 rounded-md">
+          Register Business
+        </button>
+      </div>
+    </form>
   </div>
 
-  <!-- Reply Modal -->
-  <div id="replyModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden z-50">
-    <div class="bg-white rounded-xl p-6 w-full max-w-md shadow-xl">
-      <h3 class="text-lg font-semibold text-gray-800 mb-2">Reply to Ticket</h3>
-      <p id="replyModalSubject" class="text-sm text-gray-500 mb-4"></p>
-      <textarea id="replyMessage" rows="5" class="w-full border rounded-lg p-2 text-sm text-gray-700 mb-4" placeholder="Type your reply..."></textarea>
-      <div class="flex justify-end space-x-2">
-        <button id="closeReplyBtn" class="px-4 py-2 text-gray-600 hover:underline">Cancel</button>
-        <button id="submitReplyBtn" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700">Send Reply</button>
-      </div>
-    </div>
-  </div>
+  <script>
+    const businessNameInput = document.getElementById('business_name');
+    const subdomainInput = document.getElementById('subdomain');
+    const subdomainStatus = document.getElementById('subdomainStatus');
+    const submitBtn = document.getElementById('submitBtn');
+    const form = document.getElementById('registerForm');
 
-  <!-- Scripts (deferred for CSP compatibility) -->
-  <script src="/js/auth-check.js" defer></script>
-  <script src="/admin/js/load-sidebar.js" defer></script>
-  <script src="/admin/js/support-page.min.js" defer></script>
+    businessNameInput.addEventListener('input', async () => {
+      const name = businessNameInput.value.trim().toLowerCase().replace(/\s+/g, '-').replace(/[^a-z0-9\-]/g, '');
+      subdomainInput.value = name;
+
+      if (!name) return;
+
+      try {
+        const res = await fetch(`/api/check-subdomain?subdomain=${name}`);
+        const data = await res.json();
+
+        if (data.exists) {
+          subdomainStatus.classList.remove('hidden');
+          submitBtn.disabled = true;
+        } else {
+          subdomainStatus.classList.add('hidden');
+          submitBtn.disabled = false;
+        }
+      } catch (err) {
+        console.error('Error checking subdomain:', err);
+      }
+    });
+  </script>
 </body>
 </html>
