--- a/public/register.html
+++ b/public/register.html
@@ -5,70 +5,84 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Register | Tidyzenic</title>
   <link rel="stylesheet" href="/styles.css" />
+  <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
-<body class="min-h-screen bg-gray-100 flex items-center justify-center font-sans">
-  <div class="w-full max-w-md bg-white rounded-lg shadow-lg p-8">
-    <h1 class="text-2xl font-bold text-center text-blue-700 mb-6">Register Your Business</h1>
+<body class="min-h-screen bg-gray-50 flex items-center justify-center p-4 font-sans">
+  <div class="w-full max-w-xl bg-white p-8 rounded-2xl shadow-2xl">
+    <h1 class="text-3xl font-bold text-center text-blue-700 mb-2">🚀 Register Your Business</h1>
+    <p class="text-center text-gray-500 mb-6">Start your journey with Tidyzenic today!</p>
 
-    <form action="/register" method="POST" class="space-y-4" id="registerForm">
+    <form id="registerForm" action="/register" method="POST" class="space-y-4">
+
+      <!-- Business Name -->
       <div>
         <label for="business_name" class="block text-sm font-medium text-gray-700">Business Name</label>
-        <input type="text" id="business_name" name="business_name" required class="w-full mt-1 p-2 border rounded-md" />
+        <input type="text" id="business_name" name="business_name" required class="mt-1 w-full p-3 border rounded-md shadow-sm" />
       </div>
 
-      <div>
-        <label class="block text-sm font-medium text-gray-700">Your Subdomain</label>
-        <div class="mt-1 flex items-center space-x-2">
-          <input type="text" id="subdomain" name="subdomain" required readonly class="w-1/2 p-2 border rounded-md bg-gray-100 text-gray-700" />
-          <span class="text-gray-700">.tidyzenic.com</span>
-        </div>
-        <p id="subdomainStatus" class="text-sm mt-1 text-gray-500">Subdomain preview will appear here...</p>
-      </div>
-
+      <!-- Owner Name -->
       <div>
         <label for="owner_name" class="block text-sm font-medium text-gray-700">Owner Name</label>
-        <input type="text" id="owner_name" name="owner_name" required class="w-full mt-1 p-2 border rounded-md" />
+        <input type="text" id="owner_name" name="owner_name" required class="mt-1 w-full p-3 border rounded-md shadow-sm" />
       </div>
 
+      <!-- Email -->
       <div>
         <label for="email" class="block text-sm font-medium text-gray-700">Email Address</label>
-        <input type="email" id="email" name="email" required class="w-full mt-1 p-2 border rounded-md" />
+        <input type="email" id="email" name="email" required class="mt-1 w-full p-3 border rounded-md shadow-sm" />
       </div>
 
+      <!-- Phone -->
       <div>
         <label for="phone" class="block text-sm font-medium text-gray-700">Phone Number</label>
-        <input type="tel" id="phone" name="phone" required class="w-full mt-1 p-2 border rounded-md" />
+        <input type="tel" id="phone" name="phone" required class="mt-1 w-full p-3 border rounded-md shadow-sm" />
       </div>
 
+      <!-- Subdomain with availability check -->
+      <div>
+        <label for="subdomain" class="block text-sm font-medium text-gray-700">Subdomain</label>
+        <div class="flex items-center gap-2 mt-1">
+          <input type="text" id="subdomain" name="subdomain" required class="flex-1 p-3 border rounded-md shadow-sm" />
+          <span class="text-sm text-gray-500">.tidyzenic.com</span>
+        </div>
+        <p id="subdomainStatus" class="text-sm mt-1"></p>
+      </div>
+
+      <!-- Industry -->
       <div>
         <label for="industry" class="block text-sm font-medium text-gray-700">Industry</label>
-        <input type="text" id="industry" name="industry" required class="w-full mt-1 p-2 border rounded-md" />
+        <input type="text" id="industry" name="industry" required class="mt-1 w-full p-3 border rounded-md shadow-sm" />
       </div>
 
+      <!-- Location -->
       <div>
         <label for="location" class="block text-sm font-medium text-gray-700">Location</label>
-        <input type="text" id="location" name="location" required class="w-full mt-1 p-2 border rounded-md" />
+        <input type="text" id="location" name="location" required class="mt-1 w-full p-3 border rounded-md shadow-sm" />
       </div>
 
+      <!-- VAT Number -->
       <div>
         <label for="vat_number" class="block text-sm font-medium text-gray-700">VAT Number (optional)</label>
-        <input type="text" id="vat_number" name="vat_number" class="w-full mt-1 p-2 border rounded-md" />
+        <input type="text" id="vat_number" name="vat_number" class="mt-1 w-full p-3 border rounded-md shadow-sm" />
       </div>
 
+      <!-- Password -->
       <div>
-        <label for="custom_domain" class="block text-sm font-medium text-gray-700">Custom Domain (optional)</label>
-        <input type="text" id="custom_domain" name="custom_domain" class="w-full mt-1 p-2 border rounded-md" />
+        <label for="password" class="block text-sm font-medium text-gray-700">Choose Password</label>
+        <input type="password" id="password" name="password" required minlength="6" class="mt-1 w-full p-3 border rounded-md shadow-sm" />
       </div>
 
+      <!-- Confirm Password -->
       <div>
-        <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
-        <input type="password" id="password" name="password" required minlength="6" class="w-full mt-1 p-2 border rounded-md" />
+        <label for="confirm_password" class="block text-sm font-medium text-gray-700">Confirm Password</label>
+        <input type="password" id="confirm_password" required class="mt-1 w-full p-3 border rounded-md shadow-sm" />
       </div>
 
+      <!-- Language -->
       <div>
         <label for="preferred_language" class="block text-sm font-medium text-gray-700">Preferred Language</label>
-        <select id="preferred_language" name="preferred_language" required class="w-full mt-1 p-2 border rounded-md">
+        <select id="preferred_language" name="preferred_language" required class="mt-1 w-full border rounded-md p-3 shadow-sm">
           <option value="en">English</option>
           <option value="fr">Français</option>
           <option value="nl">Dutch</option>
@@ -78,59 +92,71 @@
         </select>
       </div>
 
-      <button type="submit" id="submitBtn" class="w-full mt-4 bg-blue-600 text-white py-2 rounded-md hover:bg-blue-700">
-        Register Business
-      </button>
-    </form>
+      <!-- Submit -->
+      <div class="pt-4">
+        <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 rounded-md">
+          ✅ Register Business
+        </button>
+      </div>
 
-    <p class="mt-4 text-sm text-center text-gray-600">
-      Already registered?
-      <a href="/login.html" class="text-blue-600 hover:underline">Login</a>
-    </p>
+      <!-- Link to login -->
+      <p class="text-center text-sm mt-4 text-gray-600">
+        Already registered?
+        <a href="/login" class="text-blue-600 hover:underline font-medium">Login</a>
+      </p>
+    </form>
   </div>
 
+  <!-- Subdomain Checker + Password Match Validation -->
   <script>
-    const businessInput = document.getElementById('business_name');
+    const businessName = document.getElementById('business_name');
     const subdomainInput = document.getElementById('subdomain');
     const subdomainStatus = document.getElementById('subdomainStatus');
-    const submitBtn = document.getElementById('submitBtn');
+    const password = document.getElementById('password');
+    const confirmPassword = document.getElementById('confirm_password');
 
-    async function checkSubdomain(name) {
-      const sub = name.trim().toLowerCase().replace(/[^a-z0-9\-]/g, '-').replace(/-+/g, '-');
+    // Auto-fill subdomain
+    businessName.addEventListener('input', () => {
+      const name = businessName.value.trim().toLowerCase().replace(/[^a-z0-9]+/g, '-').substring(0, 30);
+      subdomainInput.value = name;
+      checkSubdomain(name);
+    });
+
+    // Check subdomain availability
+    subdomainInput.addEventListener('input', (e) => {
+      const sub = e.target.value.trim().toLowerCase().replace(/[^a-z0-9\-]/g, '');
       subdomainInput.value = sub;
+      checkSubdomain(sub);
+    });
 
-      if (!sub) {
-        subdomainStatus.textContent = "Subdomain preview will appear here...";
-        submitBtn.disabled = true;
+    async function checkSubdomain(subdomain) {
+      if (subdomain.length < 3) {
+        subdomainStatus.textContent = 'Subdomain too short';
+        subdomainStatus.className = 'text-sm text-red-500';
         return;
       }
 
       try {
-        const res = await fetch(`/api/business/check-subdomain?subdomain=${sub}`);
-        const data = await res.json();
-
-        if (data.available) {
-          subdomainStatus.textContent = `✅ Available: ${sub}.tidyzenic.com`;
-          subdomainStatus.className = 'text-sm text-green-600 mt-1';
-          submitBtn.disabled = false;
+        const res = await axios.get(`/api/business/check-subdomain?subdomain=${subdomain}`);
+        if (res.data.exists) {
+          subdomainStatus.textContent = `❌ Unavailable: ${subdomain}.tidyzenic.com is already taken`;
+          subdomainStatus.className = 'text-sm text-red-500';
         } else {
-          subdomainStatus.textContent = `❌ Unavailable: ${sub}.tidyzenic.com already taken`;
-          subdomainStatus.className = 'text-sm text-red-600 mt-1';
-          submitBtn.disabled = true;
+          subdomainStatus.textContent = `✅ Available: ${subdomain}.tidyzenic.com`;
+          subdomainStatus.className = 'text-sm text-green-600';
         }
       } catch (err) {
-        subdomainStatus.textContent = '⚠️ Could not check subdomain availability';
-        subdomainStatus.className = 'text-sm text-yellow-600 mt-1';
-        submitBtn.disabled = true;
+        subdomainStatus.textContent = '⚠️ Could not verify subdomain';
+        subdomainStatus.className = 'text-sm text-yellow-600';
       }
     }
 
-    businessInput.addEventListener('input', () => {
-      checkSubdomain(businessInput.value);
-    });
-
-    window.addEventListener('DOMContentLoaded', () => {
-      checkSubdomain(businessInput.value);
+    // Password confirmation
+    document.getElementById('registerForm').addEventListener('submit', (e) => {
+      if (password.value !== confirmPassword.value) {
+        e.preventDefault();
+        alert('Passwords do not match!');
+      }
     });
   </script>
 </body>
